--- a/hola/horas.html
+++ b/hola/horas.html
@@ -20,7 +20,7 @@
 </body>
      <body onload="a2();">
         
-        <strong>No molestar culo</strong>
+        <strong>hola mundo como estas</strong>
     </body>
     
 
