--- a/formilario.html
+++ b/formilario.html
@@ -37,7 +37,7 @@
         <form action="http://midominio.com/sevicioweb.com.php"method="post">
         </form>
                     <fieldset>
-                <legend>Registro</legend>
+                <legend>gddf</legend>
             <label for="nombre">nombre</label>
             <input name="nombre" id="nombre" type="text" placeholder="Nombre"/>
             <br>
