cambio los datos extras por que nosirven para nada

--- a/formilario.html
+++ b/formilario.html
@@ -46,7 +46,7 @@
             </fieldset>
         <br>
     <fieldset>
-        <legend>Datos Extra</legend>
+        <legend>Datos que no sirven para nada</legend>
         <label for="pass">contraseña</label>
         <input name="pass" id="pass" type="password" placeholder="Contraseña"/>
     <br>
