--- a/formilario.html
+++ b/formilario.html
@@ -26,7 +26,7 @@
     <table>
             <tbody>
                 <tr>
-            '    <td class="col7"><a href="multimedia.html">Inicio</a>
+            '    <td class="col7"><a href="multimedia.html">Hola mundo</a>
              </td>
            
             </table>
