--- a/formilario.html
+++ b/formilario.html
@@ -5,6 +5,7 @@
     <title>Untitled Document</title>
    <link rel="stylesheet" href="dise.css"/>
     <style>
+
     h1{
         text-align: center;
         }
@@ -22,7 +23,7 @@
     </style>
     
 </head>
-<body>
+ <font color="#ffffff">
     <table>
             <tbody>
                 <tr>
@@ -79,6 +80,6 @@
     </section>
 </header>
 
-
+<h1>hola papu<h1>
 </body>
 </html>
