nose que cambio

--- a/formilario.html
+++ b/formilario.html
@@ -23,7 +23,7 @@
     </style>
     
 </head>
- <font color="#ffffff">
+<body bgcolor = "red">
     <table>
             <tbody>
                 <tr>
