--- a/formilario.html
+++ b/formilario.html
@@ -34,7 +34,7 @@
 <header>
     <section>
         <article>
-        <h1>Formulario</h1>
+        <h1>Culon culito</h1>
         <form action="http://midominio.com/sevicioweb.com.php"method="post">
         </form>
                     <fieldset>
